kube-templates/api/overlays/stage/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        imagePullPolicy: Always
        image: api
        ports:
        - containerPort: 1337
